--- a/index.html
+++ b/index.html
@@ -3,134 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Special Message</title>
+    <title>Movie Invite</title>
     <style>
         body {
             margin: 0;
+            padding: 0;
             overflow: hidden;
             background-color: black;
+            color: white;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            font-family: 'Arial', sans-serif;
-            color: white;
+            font-family: Arial, sans-serif;
         }
 
-        #container {
-            text-align: center;
-            position: relative;
-            z-index: 10;
-        }
-
-        #message {
+        h1 {
             font-size: 3rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-            white-space: nowrap;
-            animation: fadeIn 1s forwards, typing 4s steps(45, end) 1s;
-            border-right: 4px solid white;
-            overflow: hidden;
-            display: inline-block;
-        }
-
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        @keyframes typing {
-            from { width: 0; }
-            to { width: 100%; }
+            text-align: center;
+            margin-bottom: 2rem;
         }
 
         .buttons {
-            margin-top: 20px;
+            display: flex;
+            gap: 1rem;
         }
 
-        .btn {
-            padding: 15px 30px;
-            font-size: 1.5rem;
-            margin: 0 10px;
+        button {
+            padding: 1rem 2rem;
+            font-size: 1.2rem;
             border: none;
-            border-radius: 8px;
             cursor: pointer;
-            font-weight: bold;
-            transition: transform 0.3s, background-color 0.3s;
+            border-radius: 10px;
+            transition: all 0.3s;
         }
 
-        .yes {
-            background-color: #4caf50;
+        .yes-button {
+            background-color: green;
             color: white;
         }
 
-        .yes:hover {
-            transform: scale(1.1);
-            background-color: #45a049;
+        .no-button {
+            background-color: red;
+            color: white;
+            position: relative;
         }
 
-        .no {
-            background-color: #f44336;
-            color: white;
+        .sparkle {
             position: absolute;
+            width: 5px;
+            height: 5px;
+            background-color: red;
+            border-radius: 50%;
+            animation: float 5s linear infinite;
         }
 
-        .no:hover {
-            transform: scale(1.1);
-        }
-
-        #finalMessage {
-            display: none;
-            color: #ff69b4;
-            text-align: center;
-            animation: fadeIn 1s forwards;
-        }
-
-        #finalMessage h1 {
-            font-size: 3rem;
-            margin: 0;
-        }
-
-        #finalMessage p {
-            font-size: 1.5rem;
-            color: white;
-            margin-top: 10px;
+        @keyframes float {
+            0% {
+                transform: translateY(100vh) translateX(0);
+            }
+            100% {
+                transform: translateY(-100vh) translateX(calc(100vw * var(--random-x)));
+            }
         }
     </style>
 </head>
 <body>
-<div id="container">
-    <div id="message">Would you like to go for the movie with me?</div>
+    <h1>Would you like to go for the movie?</h1>
     <div class="buttons">
-        <button class="btn yes" onclick="showFinalMessage()">Yes</button>
-        <button class="btn no" id="noBtn" onmouseover="moveNo()">No</button>
+        <button class="yes-button" onclick="sayYes()">Yes</button>
+        <button class="no-button" onmouseover="moveNoButton(this)">No</button>
     </div>
-</div>
 
-<div id="finalMessage">
-    <h1>DONE, LET'S GOOO ❤️</h1>
-    <p>text me soon</p>
-</div>
+    <script>
+        // Create red sparkles
+        const sparkleCount = 50;
+        for (let i = 0; i < sparkleCount; i++) {
+            const sparkle = document.createElement('div');
+            sparkle.classList.add('sparkle');
+            sparkle.style.setProperty('--random-x', Math.random());
+            sparkle.style.left = Math.random() * window.innerWidth + 'px';
+            sparkle.style.animationDuration = 3 + Math.random() * 2 + 's';
+            document.body.appendChild(sparkle);
+        }
 
-<script>
-    const noBtn = document.getElementById('noBtn');
-    const container = document.getElementById('container');
-    const finalMessage = document.getElementById('finalMessage');
+        // Yes button action
+        function sayYes() {
+            const message = document.createElement('div');
+            message.innerHTML = `<h1 style="color: white;">DONE, LET'S GOOO ❤️</h1>
+                                <p style="color: white; text-align: center; font-size: 1.2rem;">text mee soon</p>`;
+            document.body.innerHTML = '';
+            document.body.appendChild(message);
+        }
 
-    function moveNo() {
-        const x = Math.random() * (window.innerWidth - 100);
-        const y = Math.random() * (window.innerHeight - 50);
-        noBtn.style.left = x + 'px';
-        noBtn.style.top = y + 'px';
-    }
-
-    function showFinalMessage() {
-        container.style.display = 'none'; // Hide the initial content
-        finalMessage.style.display = 'block'; // Show the final message
-    }
-</script>
+        // No button avoidance
+        function moveNoButton(button) {
+            const randomX = Math.random() * (window.innerWidth - button.offsetWidth);
+            const randomY = Math.random() * (window.innerHeight - button.offsetHeight);
+            button.style.position = 'absolute';
+            button.style.left = `${randomX}px`;
+            button.style.top = `${randomY}px`;
+        }
+    </script>
 </body>
 </html>
+
 
 
 
